[package]
name = "network-monitor-esp-rs-no-std"
version = "0.1.0"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0", features = [
  "embassy",
  "async",
  "embassy-time-timg0",
  "embassy-executor-thread",
] }
esp-backtrace = { version = "0.10.0", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.0", features = [] }
static_cell = { version = "2.0.0", features = ["nightly"] }
esp-wifi = { version = "0.3.0", features = ["esp32c3", "async", "wifi", "dhcpv4", "embassy-net"] }
embassy-net = { version = "0.4.0", features = [
  "tcp",
  "dhcpv4",
  "udp",
  "medium-ethernet",
] }
embedded-io-async = { version = "0.6.0" }
embedded-svc = { version = "0.27.0", default-features = false, features = [] }
spin = { version = "0.9.8", features = ["lazy", "portable_atomic"] }
